# AKCIT-Camp-2025

./: .gitignore
akcit-camp-2025-main/: LICENSE
akcit-camp-2025-main/dia1/: .env-sample  .gitignore
akcit-camp-2025-main/dia1/techadvisor/: README.md  agente_gui.py  requirements.txt  techadvisor_agent.py
akcit-camp-2025-main/dia2/: APP_VISUAL.md  STREAMLIT_README.md  docker-compose.yaml  run_app.sh  run_redis.sh  streamlit_app.py
akcit-camp-2025-main/dia2/financeadvisor/: .env.example  README.md  __init__.py  main.py
akcit-camp-2025-main/dia2/financeadvisor/core/: __init__.py  data_loader.py  metrics_calculator.py  orchestrator.py
akcit-camp-2025-main/dia2/financeadvisor/crew/: crew.py  tools.py
akcit-camp-2025-main/dia2/financeadvisor/utils/: cache.py  llm_client.py
akcit-camp-2025-main/dia3/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yaml  requirements.txt
akcit-camp-2025-main/dia3/core/: data_loader.py  metrics_calculator.py  orchestrator.py
akcit-camp-2025-main/dia3/crew/: __init__.py  crew.py  tools.py
akcit-camp-2025-main/dia3/utils/: __init__.py  cache.py  langfuse_client.py  llm_client.py
exercicios/: chatbot.py  pedidos.py  teste-ollama.py
sofia-hack/sofia/: agente.py  dash2.py  dashboard.py  main.py  menu.py  pyproject.toml  upload.py
