[project]
name = "sofia"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "plotly>=6.4.0",
]
[theme]
primaryColor="#000000"
backgroundColor="#FFFFFF"
secondaryBackgroundColor="#F0F0F0"
textColor="#000000"
font="sans serif"